Fixed the overflow on footer for small devices

--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -88,5 +88,7 @@
         text-align: center;
         display: flex;
         flex-direction: column;
+    }.cont{
+        margin-top: -30px;
     }
 }
